--- a/daocloud.yml
+++ b/daocloud.yml
@@ -3,14 +3,15 @@ image: daocloud/ci-python:2.7
 services:
   - redis
 
+env:
+  - PATH=/home/ubuntu/virtualenv/python2.7/bin:${PATH}
+  
 # using below default env set by docker-link 
 # env:
 # - REDIS_PORT_6379_TCP_ADDR=redis
 # - REDIS_PORT_6379_TCP_PORT=6379
 
 script:
-  - export PATH=/home/ubuntu/virtualenv/python2.7:${PATH}
-  - ls /home/ubuntu/virtualenv/python2.7
   - pip install -r requirements.txt
   - mkdir -p daocloud/testresults
   - mkdir -p daocloud/codecoverage
